--- a/index.html
+++ b/index.html
@@ -1,8 +1,38 @@
 <html>
-    <head>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        
-    </body>
+
+<head>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <h1>Kyrgyztan</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet molestiae quia animi corporis, sequi maxime
+        possimus. Magni quod sunt facere dolorum cumque et deserunt voluptatem iusto veniam eum, eius voluptate?</p>
+    <p>Laudantium aut minus excepturi consequuntur ea optio iste similique dignissimos nihil quod nam illum blanditiis,
+        architecto labore voluptas nisi dolorem ipsam! Sapiente, earum quo molestias dolorum cupiditate harum fugiat
+        cum.</p>
+    <p>Corrupti excepturi aspernatur nulla, minima commodi tenetur aperiam, at laborum inventore modi tempore nostrum
+        omnis ut distinctio dolor! Temporibus totam consectetur dolore illo repudiandae, laboriosam explicabo inventore
+        nisi laudantium magnam.</p>
+    <p>Adipisci eligendi, perspiciatis ad asperiores consectetur iusto, ipsam rem deserunt quod enim excepturi fuga?
+        Atque porro necessitatibus aliquam alias earum eaque, optio iure praesentium autem recusandae commodi doloribus
+        mollitia perspiciatis.</p>
+    <p>Dolor quae officia nulla nihil harum, consectetur distinctio velit adipisci quia at rerum enim natus, assumenda
+        asperiores nesciunt numquam deserunt voluptatibus accusamus necessitatibus error. Dignissimos nihil eveniet
+        itaque hic necessitatibus?</p>
+    <p>Doloribus eligendi quae excepturi aliquam, eaque non natus rem. Amet consequatur placeat voluptates rerum, atque
+        reiciendis id ipsum architecto laboriosam ea fuga autem tempora totam iusto quia laudantium commodi harum.</p>
+    <p>Eius non animi molestias delectus alias aspernatur voluptatem praesentium vero aliquam, aut tempore itaque iste
+        est, quos nam unde! Rerum adipisci molestias consequatur autem impedit eius quo ipsam dolores nam!</p>
+    <p>Nobis magni, modi suscipit ad doloribus dolorem necessitatibus impedit hic distinctio, iure facilis repudiandae
+        aperiam. Alias cupiditate nihil nostrum aperiam corrupti, officiis minus? Sint sapiente maiores id accusamus
+        minima molestiae?</p>
+    <p>Praesentium, explicabo minus est nihil ad aut voluptate maiores labore repudiandae corporis. Neque modi amet
+        cumque, repudiandae ab aliquam non voluptate repellat libero corrupti magnam nam? Ipsa eaque numquam mollitia!
+    </p>
+    <p>Dolores quaerat cumque ab necessitatibus facere voluptatibus ipsa dolorem temporibus. Excepturi officiis
+        suscipit, neque totam iusto unde repellendus nam sit, assumenda dolore dolores quam ab commodi hic! Deleniti,
+        esse quis.</p>
+</body>
+
 </html>
