--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <p>Dolores quaerat cumque ab necessitatibus facere voluptatibus ipsa dolorem temporibus. Excepturi officiis
         suscipit, neque totam iusto unde repellendus nam sit, assumenda dolore dolores quam ab commodi hic! Deleniti,
         esse quis.</p>
+    <img src="flag.png" alt="flag of KR">
 </body>
 
 </html>
