--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
         suscipit, neque totam iusto unde repellendus nam sit, assumenda dolore dolores quam ab commodi hic! Deleniti,
         esse quis.</p>
     <img src="flag.png" alt="flag of KR">
+
+    <a href="#"></a>
+    <a href="#"></a>
+    <a href="#"></a>
+    <a href="#"></a>
 </body>
 
 </html>
