--- a/index.html
+++ b/index.html
@@ -35,10 +35,15 @@
         esse quis.</p>
     <img src="flag.png" alt="flag of KR">
 
-    <a href="#"></a>
-    <a href="#"></a>
-    <a href="#"></a>
-    <a href="#"></a>
+    <div class="a">
+        <a href="#">Bishkek</a>
+        <a href="#">Osh</a>
+        <a href="#">Kant</a>
+        <a href="#">Karakol</a>
+    </div>
+
+    <p class="biskek">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat, rem pariatur quae voluptatem dicta quod vero
+        labore consequatur commodi enim quo eos odio mollitia ratione nulla doloribus optio harum placeat.</p>
 </body>
 
 </html>
