add p about Osh and edit

--- a/index.html
+++ b/index.html
@@ -42,8 +42,12 @@
         <a href="#">Karakol</a>
     </div>
 
-    <p class="biskek">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat, rem pariatur quae voluptatem dicta quod vero
+    <p class="biskek">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat, rem pariatur quae voluptatem
+        dicta quod vero
         labore consequatur commodi enim quo eos odio mollitia ratione nulla doloribus optio harum placeat.</p>
+    <p class="osh">Lorem ipsum dolor sit amet consectetur adipisicingReprehenderit harum libero exercitationem
+        consequuntur officia, magnam error dignissimos eius asperiores iusto culpa perspiciatis
+        consequatur incidunt. Recusandae.</p>
 </body>
 
 </html>
