add p about kant and edit

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
     <p class="osh">Lorem ipsum dolor sit amet consectetur adipisicingReprehenderit harum libero exercitationem
         consequuntur officia, magnam error dignissimos eius asperiores iusto culpa perspiciatis
         consequatur incidunt. Recusandae.</p>
+    <p class="kant">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia quae in fuga perspiciatis esse
+        adipisci corporis iste fugit delectus quaerat possimus incidunt dolores deserunt, dolorum pariatur veritatis.
+        Vitae, quia aperiam?</p>
 </body>
 
 </html>
