--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-    <h1>Kyrgyztan</h1>
+    <h1 class="h">Kyrgyztan</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet molestiae quia animi corporis, sequi maxime
         possimus. Magni quod sunt facere dolorum cumque et deserunt voluptatem iusto veniam eum, eius voluptate?</p>
     <p>Laudantium aut minus excepturi consequuntur ea optio iste similique dignissimos nihil quod nam illum blanditiis,
